<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="homeFragment"
        android:icon="@drawable/ic_lucian"
        android:orderInCategory="1"
        android:title="@string/home" />

    <item
        android:id="@+id/LoLFragment"
        android:icon="@drawable/ic_senna"
        android:orderInCategory="2"
        android:title="@string/lol" />
    <item
        android:id="@+id/ValoFragment"
        android:icon="@drawable/ic_senna"
        android:orderInCategory="2"
        android:title="@string/valo" />
    <item
        android:id="@+id/LoRFragment"
        android:icon="@drawable/ic_senna"
        android:orderInCategory="2"
        android:title="@string/lor" />
    <item
        android:id="@+id/TFTFragment"
        android:icon="@drawable/ic_senna"
        android:orderInCategory="2"
        android:title="@string/tft" />
</menu>